merge 14444 from 3.2
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@14445 7fc7bbf3-cf45-46d4-be06-341739edd864